--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "NG_CLI_ANALYTICS=false ng serve",
+    "start": "cross-env NG_CLI_ANALYTICS=false ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development"
   },
@@ -33,6 +33,7 @@
     "@angular/build": "^20.0.5",
     "@angular/cli": "^20.0.5",
     "@angular/compiler-cli": "^20.0.0",
+    "cross-env": "^7.0.3",
     "typescript": "~5.8.2"
   }
 }
